@@ -118,8 +118,8 @@ add_filter( 'body_class','portfoliopress_body_class' );
  */
 function portfoliopress_display_image() {
 
-	// Don't display images on single post if the option is turned off
-	if ( is_single() && !of_get_option( 'portfolio_images', '1' ) ) {
+	// Don't display images if the option is turned off
+	if ( ! of_get_option( 'portfolio_images', true ) ) {
 		return;
 	}
 
