@@ -217,7 +217,7 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover {
 }
 .clear-menu #logo {
 	padding-right:0;
- }
+}
 #logo #site-title {
 	font-family: 'Rokkitt', sans-serif;
 	color: #fff;
