@@ -3,6 +3,7 @@ Portfolio Press 2.1
 - Fix for three tier menus
 - Fix for Google font loading from https
 - Remove padding on logo for small screen
+- Hide featured images in blog layout if option is unchecked
 
 Portfolio Press 2.0
 
